book/tests/snapshots/snapshot__run_reference_prql@employees-3.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/examples/employees-3.prql
---
WITH table_1 AS (
  SELECT
    de.dept_no,
    AVG(s.salary) AS salary,
    de.emp_no
  FROM
    dept_emp AS de
    LEFT JOIN salaries AS s ON s.emp_no = de.emp_no
    AND (s.from_date, s.to_date) OVERLAPS (de.from_date, de.to_date)
  GROUP BY
    de.emp_no,
    de.dept_no
)
SELECT
  table_1.dept_no,
  table_1.salary,
  employees.gender,
  titles.title
FROM
  table_1
  JOIN employees ON table_1.emp_no = employees.emp_no
  JOIN titles ON table_1.emp_no = titles.emp_no
