book/tests/snapshots/snapshot__run_reference_prql@introduction-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/introduction-0.prql
---
WITH table_0 AS (
  SELECT
    title,
    country,
    salary + COALESCE(tax, 0) + benefits_cost AS gross_cost,
    salary + COALESCE(tax, 0) AS gross_salary,
    start_date
  FROM
    employees
),
table_1 AS (
  SELECT
    title,
    country,
    AVG(gross_salary) AS _expr_0,
    SUM(gross_cost) AS sum_gross_cost,
    CONCAT(title, '_', country) AS id,
    LEFT(country, 2) AS country_code
  FROM
    table_0
  WHERE
    start_date > DATE '2021-01-01'
    AND gross_cost > 0
)
SELECT
  title,
  country,
  _expr_0,
  sum_gross_cost,
  id,
  country_code
FROM
  table_1
GROUP BY
  title,
  country
HAVING
  sum_gross_cost > 100000
ORDER BY
  sum_gross_cost,
  country DESC
LIMIT
  20
