book/tests/snapshots/snapshot__run_reference_prql@pipelines-2.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/pipelines-2.prql
---
SELECT
  employees.*,
  salary + payroll_tax AS gross_salary
FROM
  employees
ORDER BY
  gross_salary
