book/tests/snapshots/snapshot__run_reference_prql@syntax-9.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/syntax-9.prql
---
SELECT
  `project-foo.dataset.table`.*,
  `project-bar.dataset.table`.*,
  col_bax
FROM
  `project-foo.dataset.table`
  JOIN `project-bar.dataset.table` USING(col_bax)
